OAKHILL/src/objects/Investor_Report_Document__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Recipients__c</fullName>
        <inlineHelpText>Concatenation of additional recipient&apos;s names.</inlineHelpText>
        <label>Additional Recipients</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <formula>Related_Account__r.Fund__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Related_Account__c</referenceTo>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Generator__c</fullName>
        <label>Report Generator</label>
        <referenceTo>Report_Generator__c</referenceTo>
        <relationshipName>Transaction_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unsent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Investor Report Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>Investor Report Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Report Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>